# EC521-Final-Project

./: .gitignore  .pre-commit-config.yaml  Makefile  Project plans.docx  README.md  Sandbox_Analysis.py  benign_npm_set.json  benign_npm_top.json  benign_npm_top.txt  benign_pypi_set.json  benign_pypi_top.json  benign_pypi_top.txt  bitcommit_high2.json  bitcommit_low.json  fetch_codeberg.js  fetch_npm.js  osv_npm_v2.ndjson  osv_pypi_v2.ndjson  recent_pypi_scan.json  verify_presentation_trigger.py
.github/workflows/: sandbox-setup.yml
artifacts/results/: bitcommit_low2.json  bitcommit_scan.json  recent_pypi_packages.txt  recent_pypi_scan_small.json  recent_pypi_scan_small2.json
docker/: DOCKERBASICS.txt  Setup.txt  dockerfile  run_sandbox.sh
extension/: fetch_github.js
extension/content_scripts/: fetch_gitlab.js
popup/: slopspotter_settings.js
python_app/: pyproject.toml
python_app/src/: .main.py.swp
sandbox-env/: Dockerfile
scripts/: README.md  build_everything.bash  deep_scan_debug.py  install_messaging_jsons.py  malicious_batch_scan.py  osv_full_scan.py  slopspotter.json  sync_data.py  sync_metadata.py  watch_backend.bash
slopspotter-cli/: README.md  pyproject.toml
slopspotter-cli/src/slopspotter/: __init__.py  __main__.py  constants.json  constants.py  diagnostics.py  drawing.py  llm_decisions.py  main_host.py  manifests.py  messaging.py  package_tokens.py  registries.py  scoring.py  signals.py  vm_sandbox.py  vm_sandbox_core.py  words.py
slopspotter-cli/test/: llm_tokenization_example.py  test_llm_decisions.py  test_scoring_backend.py  test_words.py
slopspotter-extension/: README.md  background.js  jsconfig.json  manifest.json  package-lock.json  package.json  webpack.config.js
slopspotter-extension/popup/: slopspotter_settings.js
slopspotter-extension/src/: background.js  constants.json
slopspotter-extension/src/background/: index.js
slopspotter-extension/src/content/: contentScript.js
slopspotter-extension/src/content_scripts/: annotate_packages.js  fetch_pypi.js
slopspotter-extension/src/popup/: popup.css  popup.html  popup.js  slopspotter_settings.js
slopspotter-extension/src/utils/: dom.js  parser.js
slopspotter-extension/test/: parser.test.js
slopspotter-frontend/: manifest.json
slopspotter-frontend/popup/: slopspotter_settings.html
slopspotter-virtualization/: .gitignore  README.md  qemu_sandbox.py  vm_image_builder.script.py  vm_image_builder_script.py
slopspotter-virtualization/docker/node/: Dockerfile  runner.js
slopspotter-virtualization/docker/python/: Dockerfile  runner.py
slopspotter-virtualization/tests/: test_sandbox.py
slopspotter-virtualization/vm-images/cloud-init/: meta-data  network-config  user-data
