[project]
name = "slopspotter"
version = "0.0.1"
dependencies = []
requires-python = ">3.10"
authors = [
  { name = "Victor Mercola", email = "vmercola@bu.edu" },
  { name = "Kevin Zhang", email = "wzhang@bu.edu" },
  { name = "Hieu Nguyen", email = "hnguyen0@bu.edu" },
  { name = "Oscar Zhang", email = "hz0820@bu.edu" },
]
description = "Get info about a package suggested by an AI language model"
readme = "README.md"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Repository = "https://github.com/hzbu820/EC521-Final-Project"
