[project]
dependencies = [
	"accelerate",
	"joblib>=1.5.2",
	"networkx>=3.5",
	"scipy>=1.16.3",
	"torch>=2.7.1",
	"transformers",
]
name = "slopspotter"
version = "0.1.0"
requires-python = ">=3.11"
authors = [
	{ name = "Victor Mercola", email = "vmercola@bu.edu" },
	{ name = "Kevin Zhang", email = "wzhang@bu.edu" },
	{ name = "Hieu Nguyen", email = "hnguyen0@bu.edu" },
	{ name = "Oscar Zhang", email = "hz0820@bu.edu" },
]
description = "Get info about a package suggested by an AI language model"
readme = "README.md"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["ipympl", "ipython", "jupyter", "matplotlib", "pytest", "qtpy"]
graphs = ["pygraphviz"]

[project.scripts]
slopspotter = "slopspotter.__main__:main"

[project.urls]
Repository = "https://github.com/hzbu820/EC521-Final-Project"

[tool.uv.sources]
torch = [
	{ index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
